--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.mjs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,9 +20,13 @@
     "ascii-table3": "^0.7.6",
     "asciichart": "^1.5.25",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "boxen": "^7.0.0",
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
-    "inquirer": "^9.0.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "inquirer": "^9.0.1",
+    "request": "^2.88.2"
   }
 }
